<resources>
    <string name="fa_map_o">&#xf278;</string>
    <string name="fa_icon_linechart">&#xf201;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_trash_o">&#xf014;</string>
    <string name="fa_upload">&#xf093;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_ellipsis_v">&#xf142;</string>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_recycle">&#xf1b8;</string>
    <string name="fa_map_pin">&#xf276;</string>
    <string name="fa_hand_o_down">&#xf0a7;</string>
    <string name="fa_cogs">&#xf085;</string>
    <string name="fa_share_alt">&#xf1e0;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fa_floppy_o">&#xf0c7;</string>
    <string name="fa_times_circle_o">&#xf05c;</string>
    <string name="fa_play_circle_o">&#xf01d;</string>
    <string name="fa_pause_circle_o">&#xf28c;</string>
    <string name="fa_stop_circle_o">&#xf28e;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_unlock_alt">&#xf13e;</string>
    <string name="fa_whatsapp">&#xf232;</string>
    <string name="fa_facebook_official">&#xf230;</string>
    <string name="fa_arrow_up">&#xf062;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_folder_o">&#xf114;</string>
    <string name="fa_file_text_o">&#xf0f6;</string>
    <string name="app_name">Explorer Assistant</string>
    <string name="mi_tracks">Track Manager</string>
    <string name="mi_locate">Locate</string>
    <string name="mi_fileChooser">File Chooser</string>
    <string name="current_location">I AM HERE</string>
    <string name="marker_direction">MARKER DIRECTION</string>
    <string name="facebook_app_id">1553731234648288</string>
    <string name="fb_login_protocol_scheme">fb1553731234648288</string>
    <string name="google_maps_key">AIzaSyDIRVdWSoCVqMHD5wuU38hWWxnCimp1mHs</string>
    <string name="mapquest_key">SHLFESNpAk5qF9p3L09QePuMeo1KkEuW</string>
    <string name="title_activity_saved_tracks">SavedTracksActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="fb_conn_success">Facebook Connection Success</string>
    <string name="fb_conn_cancel">Facebook Connection Canceled</string>
    <string name="fb_conn_fail">Facebook Connection Failed</string>
    <string name="err_fill_this_field">Please fill this field.</string>
    <string name="load_in_progess">Operation not allowed: Satellite connection is in progress.</string>
    <string name="alarm_on">"Acustic Alarm Resumed"</string>
    <string name="alarm_off">"Acustic Alarm Suppressed"</string>
    <string name="str_load">Load...</string>
    <string name="nothig_to_show">"Attention: No tracks to show."</string>
    <string name="auto_calibrate_complete">"Auto Calibration Complete: setting has been changed."</string>
    <string name="auto_calibrate_failure">"Auto Calibration Failure: check Intenet Connection."</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="btn_share_title_fb">Share with Facebook</string>
    <string name="btn_share_title_wa">Share with WhatsApp</string>
    <string name="str_offline_mode">OFFLINE MODE</string>
    <string name="str_offline_map_empty">OFFLINE MAP IS EMPTY</string>
    <string name="str_offline_map_not_exist">OFFLINE MAP NOT EXIST</string>
    <string name="str_tempo">Time</string>
    <string name="str_distanza">Distance</string>
    <string name="str_ritmomedio">Avg Speed</string>
    <string name="str_h_max">H max</string>
    <string name="str_h_min">H min</string>
    <string name="str_d_plus">D+</string>
    <string name="str_d_minus">D-</string>
    <string name="str_nome_traccia">Following Track Name</string>
    <string name="str_fuori_percorso">Out of the way</string>
    <string name="str_SI">YES</string>
    <string name="str_NO">NO</string>
    <string name="str_nome_wp">Following WayPoint Name</string>
    <string name="selectmode_titolo">Select</string>
    <string name="selectmode_tutte">All Tracks</string>
    <string name="selectmode_per_date">Tracks by Date</string>
    <string name="str_length">Length</string>
    <string name="str_time">Time</string>
    <string name="tla_selezione_per_data">Display by date: </string>
    <string name="tla_selezione_completa">All tracks have been displayed</string>
    <string name="sharing_titolo">Share</string>
    <string name="sharing_fb">Facebook</string>
    <string name="sharing_wa">Whatsapp</string>
    <string name="cal_legenda">LEGEND</string>
    <string name="cal_cur_day_indicator">Current day indicator</string>
    <string name="cal_sel_day_indicator">Selected day indicator</string>
    <string name="cal_sel_date_indicator">Selected interval date indicator</string>
    <string name="cal_event_indicator">Activities precence indicator</string>
    <string name="str_app_attiva">I\'m Active in background.</string>
    <string name="str_reg_in_corso">Recording mode active.</string>
    <string name="str_reg_in_pausa">Recording mode in pause.</string>
    <string name="str_app_in_following">Following mode active</string>
    <string name="str_app_in_wp_selected">Selected waypoint mode active.</string>
    <string name="titolo_tab_dist_time">Distance/Time</string>
    <string name="titolo_tab_alt_time">Altitude/Time</string>
    <string name="titolo_tab_alt_dist">Altitude/Distance</string>
    <string name="titolo_tab_details">Details</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_facebook">Facebook</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_def_key_select_track_mode">select_track_mode</string>
    <string name="pref_def_title_select_track_mode">Select Track Mode</string>
    <string name="pref_def_summary_select_track_mode">Center the map to the current location automatically</string>
    <string name="pref_gps_key_minum_distance">gps_minimum_distance_for_direction</string>
    <string name="pref_gps_title_minum_distance">Minimun distance to detect direction[m]</string>
    <string name="pref_gps_summary_minum_distance">Minimun distance to detect direction</string>
    <string name="pref_gps_key_minum_time_for_direction">gps_minimum_time_for_direction</string>
    <string name="pref_gps_title_minum_time_for_direction">Minimun time to detect direction[s]</string>
    <string name="pref_gps_summary_minum_time_for_direction">Minimun time to detect direction</string>
    <string name="pref_gps_key_minum_time">gps_minimum_time</string>
    <string name="pref_gps_title_minum_time">Minimun time [min]</string>
    <string name="pref_gps_summary_minum_time">Minimun time to sample position</string>
    <string name="pref_gps_key_geoid_correction">geoid_correction</string>
    <string name="pref_gps_title_geoid_correction">Elevation Geoid Correction [m]</string>
    <string name="pref_gps_summary_geoid_correction">Elevation Geoid Correction</string>
    <string name="pref_gps_key_autocalibrate">autocalibrate</string>
    <string name="pref_gps_title_autocalibrate">Auto Calibrate Altitude</string>
    <string name="pref_gps_summary_autocalibrate">If Auto Calibrate Altitude is active the application calculates the Geoid Correction to be applied.</string>
    <string name="pref_following_key_minum_distance">following_minimum_distance</string>
    <string name="pref_following_title_minum_distance">Minimun distance [m]</string>
    <string name="pref_following_summary_minum_distance">Minimun distance to detect out of path</string>
    <string name="pref_following_key_sound_out_of_path">switch_sound</string>
    <string name="pref_following_title_sound_out_of_path">Enable Sound</string>
    <string name="pref_following_summary_sound_out_of_path">Enable Sound of Out of Path</string>
    <string name="pref_following_key_default_interval_ring">interval_ring</string>
    <string name="pref_following_title_default_interval_ring">Ring Interval [s]</string>
    <string name="pref_following_summary_default_interval_ring">Time interval between two rings</string>
    <string name="pref_offlinemap_switch_key">offlinemap_switch_key</string>
    <string name="pref_offlinemap_switch_title">Offline Mode</string>
    <string name="pref_offlinemap_switch_summary">Offline Mode</string>
    <string name="pref_offlinemap_key">offlinemap_key</string>
    <string name="pref_offlinemap_title">Offline Map</string>
    <string name="pref_offlinemap_summary">Use this Offline Map</string>
    <string name="pref_offlinemap_zoom_max_key">offlinemap_zoom_max_key</string>
    <string name="pref_offlinemap_zoom_max_title">Zoom Max</string>
    <string name="pref_offlinemap_zoom_max_summary">Zoom Max</string>
    <string name="pref_offlinemap_zoom_min_key">offlinemap_zoom_min_key</string>
    <string name="pref_offlinemap_zoom_min_title">Zoom Min</string>
    <string name="pref_offlinemap_zoom_min_summary">Zoom Min</string>
    <string name="pref_credits_copyright_key">copyright_key</string>
    <string name="pref_credits_copyright_title">Open Street Map Copyright</string>
    <string name="pref_credits_copyright_summary">Link to copyright page:www.openstreetmap.org/copyright</string>
    <string name="pref_credits_appvs_key">appvs_key</string>
    <string name="pref_credits_appvs_title">App Version</string>
    <string name="pref_credits_appvs_summary">1.0.0</string>
    <string name="pref_credits_appname_key">appvs_name</string>
    <string name="pref_credits_appname_title">App Name</string>
</resources>