<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:editable="false"
        android:key="@string/pref_credits_appname_key"
        android:selectAllOnFocus="true"
        android:selectable="false"
        android:summary="@string/app_name"
        android:title="@string/pref_credits_appname_title"
        android:defaultValue="@string/app_name"/>

    <EditTextPreference
        android:editable="false"
        android:key="@string/pref_credits_appvs_key"
        android:selectAllOnFocus="true"
        android:selectable="false"
        android:summary="@string/pref_credits_appvs_summary"
        android:title="@string/pref_credits_appvs_title" /> />

    <EditTextPreference
        android:editable="false"
        android:key="@string/pref_credits_copyright_key"
        android:selectAllOnFocus="true"
        android:selectable="false"
        android:summary="@string/pref_credits_copyright_summary"
        android:title="@string/pref_credits_copyright_title" />

</PreferenceScreen>