<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_following_key_sound_out_of_path"
        android:summary="@string/pref_following_summary_sound_out_of_path"
        android:title="@string/pref_following_title_sound_out_of_path" />

    <EditTextPreference
        android:defaultValue="1"
        android:inputType="number"
        android:key="@string/pref_following_key_minum_distance"
        android:selectAllOnFocus="true"
        android:title="@string/pref_following_title_minum_distance"
        android:summary="@string/pref_following_summary_minum_distance"
        />

    <EditTextPreference
        android:defaultValue="30"
        android:inputType="number"
        android:key="@string/pref_following_key_default_interval_ring"
        android:selectAllOnFocus="true"
        android:title="@string/pref_following_title_default_interval_ring"
        android:summary="@string/pref_following_summary_default_interval_ring"
        />

 </PreferenceScreen>
