<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_wd_item_save"
        app:actionLayout="@layout/lay_menu_item"
        android:title="Map"
        android:titleCondensed="@string/fa_floppy_o"
        android:orderInCategory="2"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/menu_wd_item_go_to_wp_list"
        app:actionLayout="@layout/lay_menu_item"
        android:title="Waypoints List"
        android:titleCondensed="@string/fa_map_pin"
        android:orderInCategory="1"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/menu_wd_item_go_to_map"
        app:actionLayout="@layout/lay_menu_item"
        android:title="Map"
        android:titleCondensed="@string/fa_map_o"
        android:orderInCategory="0"
        app:showAsAction="always"></item>


</menu>