<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_det_item_go_to_tracklist"
        android:orderInCategory="0"
        android:title="Settings"
        android:titleCondensed="@string/fa_list"
        app:actionLayout="@layout/lay_menu_item"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/menu_det_item_go_to_map"
        app:actionLayout="@layout/lay_menu_item"
        android:title="Map"
        android:titleCondensed="@string/fa_map_o"
        android:orderInCategory="1"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/menu_det_item_go_to_share"
        app:actionLayout="@layout/lay_menu_item"
        android:title="Share"
        android:titleCondensed="@string/fa_share_alt"
        android:orderInCategory="2"
        app:showAsAction="always"></item>

</menu>