<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_select_trackList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@android:color/black"
    android:baselineAligned="false"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="2dp">

    <LinearLayout
        android:id="@+id/lay_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp"
        android:background="@drawable/border_white"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/selectmode_titolo"
            android:textColor="@color/cast_libraries_material_featurehighlight_text_body_color"
            android:textSize="30sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/lay_command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/border_white"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_img_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/fa_list" />

                <TextView
                    android:id="@+id/tv_all_item_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/selectmode_tutte"
                    android:textColor="@color/cast_libraries_material_featurehighlight_text_body_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_img_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/fa_calendar" />

                <TextView
                    android:id="@+id/tv_by_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/selectmode_per_date"
                    android:textColor="@color/cast_libraries_material_featurehighlight_text_body_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>